@@ -1866,6 +1866,7 @@ int did_player_cross_screen(int lock_sprite, int h)
 	    play.last_map = *pmap;
 	  
 	  draw_map_game();
+	  // compatibility: update Dink position *after* screen change
 	  spr[h].x = 619;
 	  spr[h].y = spr[h].lpy[0];
 	  ret = 1;
@@ -1892,6 +1893,7 @@ int did_player_cross_screen(int lock_sprite, int h)
 	    play.last_map = *pmap;
 	  
 	  draw_map_game();
+	  // compatibility: update Dink position *after* screen change
 	  spr[h].x = playl;
 	  spr[h].y = spr[h].lpy[0];
 	  ret = 1;
@@ -1917,8 +1919,11 @@ int did_player_cross_screen(int lock_sprite, int h)
 	  if (map.indoor[*pmap] == 0)
 	    play.last_map = *pmap;
 	  
+	  // compatibility: update Dink X position *before* screen change
+	  // (shouldn't matter when though, since it's an Y motion)
 	  spr[h].x = spr[h].lpx[0];
 	  draw_map_game();
+	  // compatibility: update Dink Y position *after* screen change
 	  spr[h].y = 399;
 	  ret = 1;
 	}
@@ -1945,6 +1950,7 @@ int did_player_cross_screen(int lock_sprite, int h)
 	    play.last_map = *pmap;
 	  
 	  draw_map_game();
+	  // compatibility: update Dink position *after* screen change
 	  spr[h].y = 0;
 	  spr[h].x = spr[h].lpx[0];
 	  ret = 1;
